--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "prebuild": "prisma generate",
+    "postinstall": "prisma generate",
     "build": "tsc",
     "start": "node dist/index.js",
     "prisma:generate": "prisma generate",
