--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "prestart": "prisma generate",
-    "postinstall": "prisma generate && prisma db push --accept-data-loss --skip-generate",
+    "postinstall": "prisma generate && prisma db push --accept-data-loss --skip-generate && tsx src/seed.ts",
     "start": "node dist/index.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
