--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL="postgresql://username:password@localhost:5432/spinthewheel?schema=public"
+DATABASE_URL="postgresql://postgres:roqwAPKQNLfRwJXEKWJBUdsukELBJpat@postgres.railway.internal:5432/railway"
 
 # JWT Secret (change this to a random string in production)
 JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
